# electronSourceController2

./: Makefile  README.md
hostctrl/: Makefile  README.md
hostctrl/src/: electronctrl.h  electronctrl_serial.c  maincli.c
hostgui/: README.md  setup.cfg
hostgui/src/: .gitignore
hostgui/src/egungui/: eguncom.py  egungui.py
hostgui/src/electronsourcecontroller2/: eguncom.py  egungui.py  egunmqttbridge.py  mqttpattern.py
hostgui/tests/: test001_simplysequence.py
kicad/interfaceboard/: .gitignore  fp-info-cache  fp-lib-table  interfaceboard.kicad_pcb  interfaceboard.kicad_prl  interfaceboard.kicad_pro  interfaceboard.kicad_sch  sym-lib-table
kicad/interfaceboard/AC_05_3.pretty/: AC-05-3.kicad_mod
src/: adc.c  adc.h  cfgeeprom.c  cfgeeprom.h  controller.c  controller.h  psu.c  psu.h  pwmout.c  pwmout.h  serial.c  serial.h  sysclock.c  sysclock.h
