[metadata]
name = electronsourcecontroller2-tspspi
version = 0.0.21
author = Thomas Spielauer
author_email = pypipackages01@tspi.at
description = Python library and CLI for our custom electron gun slow-control system
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tspspi/electronSourceController2
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pyserial >= 3.4
    paho-mqtt >= 1.6.1
    daemonize >= 2.5.0
    lockfile >= 0.12.2

[options.packages.find]
where = src

# [options.entry_points]
#  console_scripts =
#      eguncli = electronsourcecontroller2.eguncli:mainentrypoint
